# ethereum-scanner

./: .gitignore  README.md  interface.py  main.py  pyproject.toml  requirements.txt
src/transactions/: __init__.py  transaction.py
theme/: ttkbootstrap.themes.user.py
